kubernetes/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  annotations:
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
    secretName: ssl-secret
    hosts:
      - my-domain.com
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: web-app-service
                port:
                  number: 443
